--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 
     <div id="login_bg" class="login_bg"></div>
     <div id="login" class="login">
-      <div id="login_banner" class="login_banner login_box"></div>
+      <div id="login_banner" class="login_banner login_box">
+        font
+        <img src="img/id/Avocado.png" alt="Avocado">
+      </div>
       <form action="info.php" method="POST" class="login_box">
         <label for=""><input type="email" name="email" id="email" placeholder="이메일" maxlength="30"></label>
         <label for=""> <input type="text"></label>
