--- a/index.html
+++ b/index.html
@@ -65,8 +65,28 @@
 
                 <!-- 윤다솔입니다 -->
                 <div id="third_1" class="third_1 third">
+                    <div id="third1_box" class="third1_box1">
+                        <img src="" alt="">
+                    </div>
+                    <div id="third1_text" class="third1_text1">
+                        <h3>아보카도의 엄청난 선물</h3>
+                        <p>아보카도에서 3만원 이상 구매시<br>2만원 상당의 사은품 증정</p>
+                    </div>
+                    <div id="thurd1_button" class="third1_btn1">
+                        <button>바로가기</button>
+                    </div>
                 </div>
-                <div id="third_2" class="third_2 third"></div>
+                <div id="third_2" class="third_2 third">
+                    <div id="third2_box" class="third2_box2">
+                        <img src="" alt="">
+                    </div>
+                    <div id="third2_text" class="third2_text2">
+
+                    </div>
+                    <div id="thurd2_button" class="third2_btn2">
+                        <button>바로가기</button>
+                    </div>
+                </div>
 
 
                 <div id="third_3" class="third_3 third"></div>
