--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <div id="banner" class="banner">
             <img src="img/banner/banner_1200.png" alt="banner_1200">
             <img src="img/banner/Avocado.png" alt="Avocado">
-
-            <!-- <img src="img/banner/banner_1700.png" alt="banner_1200"> -->
         </div>
         <section>
             <article id="art_1" class="art_1">
@@ -67,16 +65,18 @@
                 <div id="third_1" class="third_1 third">
                 </div>
                 <div id="third_2" class="third_2 third"></div>
-
-
                 <div id="third_3" class="third_3 third"></div>
             </article>
-
         </section>
 
         <div id="login_bg" class="login_bg"></div>
         <div id="login" class="login">
-            <div id="login_banner" class="login_banner login_box"></div>
+            <div id="login_banner" class="login_banner login_box">
+                <div id="login_close" class="login_close">
+                    <span></span>
+                </div>
+                <img src="img/id/Avocado.png" alt=Avocado">
+            </div>
             <form action="info.php" method="POST" class="login_box">
                 <label for=""><input type="email" name="email" id="email" placeholder="이메일" maxlength="30"></label>
                 <label for=""> <input type="text"></label>
@@ -86,27 +86,11 @@
             <div id="start_sns" class="start_sns login_box"></div>
             <div id="login_footer" class="login_footer login_box"></div>
         </div>
-        <div id="third_2" class="third_2 third"></div>
-        <div id="third_3" class="third_3 third"></div>
+    
       </article>
 
     </section>
-
-    <div id="login_bg" class="login_bg"></div>
-    <div id="login" class="login">
-      <div id="login_banner" class="login_banner login_box">
-        font
-        <img src="img/id/Avocado.png" alt="Avocado">
-      </div>
-      <form action="info.php" method="POST" class="login_box">
-        <label for=""><input type="email" name="email" id="email" placeholder="이메일" maxlength="30"></label>
-        <label for=""> <input type="text"></label>
-        <input type="submit" name="submit" id="submit" value="로그인">
-      </form>
-      <div id="find_info" class="find_info login_box"></div>
-      <div id="start_sns" class="start_sns login_box"></div>
-      <div id="login_footer" class="login_footer login_box"></div>
-    </div>
+ 
 </body>
 
 </html>
