--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                         <img src="" alt="">
                     </div>
                     <div id="third2_text" class="third2_text2">
-
+                        <h3>매일매일 출석하자 !</h3>
+                        <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
                     </div>
                     <div id="thurd2_button" class="third2_btn2">
                         <button>바로가기</button>
@@ -89,7 +90,18 @@
                 </div>
 
 
-                <div id="third_3" class="third_3 third"></div>
+                <div id="third_3" class="third_3 third">
+                    <div id="third3_box" class="third3_box3">
+                        <img src="" alt="">
+                    </div>
+                    <div id="third3_text" class="third3_text3">
+                        <h3></h3>
+                        <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
+                    </div>
+                    <div id="thurd3_button" class="third3_btn3">
+                        <button>바로가기</button>
+                    </div>
+                </div>
             </article>
 
         </section>
