--- a/index.html
+++ b/index.html
@@ -63,9 +63,44 @@
 
                 <!-- 윤다솔입니다 -->
                 <div id="third_1" class="third_1 third">
+                    <div id="third1_box" class="third1_box1">
+                        <img src="" alt="">
+                    </div>
+                    <div id="third1_text" class="third1_text1">
+                        <h3>아보카도의 엄청난 선물</h3>
+                        <p>아보카도에서 3만원 이상 구매시<br>2만원 상당의 사은품 증정</p>
+                    </div>
+                    <div id="thurd1_button" class="third1_btn1">
+                        <button>바로가기</button>
+                    </div>
                 </div>
-                <div id="third_2" class="third_2 third"></div>
-                <div id="third_3" class="third_3 third"></div>
+                <div id="third_2" class="third_2 third">
+                    <div id="third2_box" class="third2_box2">
+                        <img src="" alt="">
+                    </div>
+                    <div id="third2_text" class="third2_text2">
+                        <h3>매일매일 출석하자 !</h3>
+                        <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
+                    </div>
+                    <div id="thurd2_button" class="third2_btn2">
+                        <button>바로가기</button>
+                    </div>
+                </div>
+
+
+                <div id="third_3" class="third_3 third">
+                    <div id="third3_box" class="third3_box3">
+                        <img src="" alt="">
+                    </div>
+                    <div id="third3_text" class="third3_text3">
+                        <h3></h3>
+                        <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
+                    </div>
+                    <div id="thurd3_button" class="third3_btn3">
+                        <button>바로가기</button>
+                    </div>
+                </div>
+
             </article>
         </section>
 
@@ -75,16 +110,16 @@
                 <div id="login_close" class="login_close">
                     <span></span>
                 </div>
-                <img src="img/id/Avocado.png" alt=Avocado">
+                <img src="img/id/Avocado.png" alt=Avocado ">
             </div>
-            <form action="info.php" method="POST" class="login_box">
-                <label for=""><input type="email" name="email" id="email" placeholder="이메일" maxlength="30"></label>
-                <label for=""> <input type="text"></label>
-                <input type="submit" name="submit" id="submit" value="로그인">
+            <form action="info.php " method="POST " class="login_box ">
+                <label for=" "><input type="email " name="email " id="email " placeholder="이메일 " maxlength="30 "></label>
+                <label for=" "> <input type="text "></label>
+                <input type="submit " name="submit " id="submit " value="로그인 ">
             </form>
-            <div id="find_info" class="find_info login_box"></div>
-            <div id="start_sns" class="start_sns login_box"></div>
-            <div id="login_footer" class="login_footer login_box"></div>
+            <div id="find_info " class="find_info login_box "></div>
+            <div id="start_sns " class="start_sns login_box "></div>
+            <div id="login_footer " class="login_footer login_box "></div>
         </div>
     
       </article>
