--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                         <img src="" alt="">
                     </div>
                     <div id="third3_text" class="third3_text3">
-                        <h3></h3>
-                        <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
+                        <h3>회원가입시 3000P 선물</h3>
+                        <p>지금 바로 아보카도 회원가입시<br>3000P를 드립니다!</p>
                     </div>
                     <div id="thurd3_button" class="third3_btn3">
                         <button>바로가기</button>
