--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <!-- 윤다솔입니다 -->
                 <div id="third_1" class="third_1 third">
                     <div id="third1_box" class="third1_box1">
-                        <img src="" alt="">
+                        <img src="img/art3/1.png" alt="">
                     </div>
                     <div id="third1_text" class="third1_text1">
                         <h3>아보카도의 엄청난 선물</h3>
@@ -76,7 +76,7 @@
                 </div>
                 <div id="third_2" class="third_2 third">
                     <div id="third2_box" class="third2_box2">
-                        <img src="" alt="">
+                        <img src="img/art3/2.png" alt="">
                     </div>
                     <div id="third2_text" class="third2_text2">
                         <h3>매일매일 출석하자 !</h3>
