--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <p>아보카도에서 3만원 이상 구매시<br>2만원 상당의 사은품 증정</p>
                     </div>
                     <div id="thurd1_button" class="third1_btn1">
-                        <button>바로가기</button>
+                        <button><a href="#">바로가기</a></button>
                     </div>
                 </div>
                 <div id="third_2" class="third_2 third">
@@ -83,21 +83,21 @@
                         <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
                     </div>
                     <div id="thurd2_button" class="third2_btn2">
-                        <button>바로가기</button>
+                        <button><a href="#">바로가기</a></button>
                     </div>
                 </div>
 
 
                 <div id="third_3" class="third_3 third">
                     <div id="third3_box" class="third3_box3">
-                        <img src="" alt="">
+                        <img src="img/art3/3.png" alt="">
                     </div>
                     <div id="third3_text" class="third3_text3">
                         <h3>회원가입시 3000P 선물</h3>
                         <p>지금 바로 아보카도 회원가입시<br>3000P를 드립니다!</p>
                     </div>
                     <div id="thurd3_button" class="third3_btn3">
-                        <button>바로가기</button>
+                        <button><a href="#">바로가기</a></button>
                     </div>
                 </div>
 
