--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
                     <p>이메일로 회원가입</p>
                 </div>
             </div>
-            <div id="start_sns " class="start_sns login_box "></div>
+            <div id="start_sns " class="start_sns login_box ">
+                <div id="sns_left" class="sns_left"></div>
+                <div id="sns_right" class="sns_right"></div>
+            </div>
             <div id="login_footer " class="login_footer login_box"></div>
         </div>
     
