가운데 수정

--- a/index.html
+++ b/index.html
@@ -118,11 +118,8 @@
                 <input type="submit" value="로그인">
             </form>
             <div id="find_info " class="find_info login_box ">
-                <div id="find_password" class="find_password">
-                    <p>비밀번호 찾기</p>
-                </div>
-                <div>/</div>
-                <div id="find_password" class="find_password">
+              
+                <div id="signUp" class="signUp">
                     <p>이메일로 회원가입</p>
                 </div>
             </div>
@@ -130,7 +127,12 @@
                 <div id="sns_left" class="sns_left"></div>
                 <div id="sns_right" class="sns_right"></div>
             </div>
-            <div id="login_footer " class="login_footer login_box"></div>
+            <div id="login_footer " class="login_footer login_box">
+                <div id="foot_info" class="foot_info">
+                    <p>일반 회원 /  온라인 고객센터070-4211-3951</p>
+                    <p>A/S 고객센터 1899-6840</p>
+                </div>
+            </div>
         </div>
     
       </article>
