--- a/index.html
+++ b/index.html
@@ -164,49 +164,55 @@
         
                   <div class="second_3 second">
                     <div class="product">
-                      <img src="" alt="">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/mask3/png/beauty1_9900.png" alt="1">
+                      <p class="pro_p1">ma:nyo</p>
+                      <p class="pro_p2">pure & deep cleansing foam</p>
+                      <p class="pro_p3">9,900원</p>
                     </div>
                     <div class="product">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/mask3/png/beauty2_17900.png" alt="2">
+                      <p class="pro_p1">라운드랩</p>
+                      <p class="pro_p2">독도 클렌징</p>
+                      <p class="pro_p3">17,900</p>
+                    </div>
+                    <div class="product" id="product_b">
+                      <img src="img/art2/mask3/png/beauty3_24000.png" alt="3">
+                      <p class="pro_p1">SO.NATURAL</p>
+                      <p class="pro_p2">겟잇뷰티 1위 메이크업 픽서</p>
+                      <p class="pro_p3">24,000원</p>
                     </div>
                     <div class="product">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
-                    </div>
-                    <div class="product">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/mask3/png/beauty4_6300.png" alt="4">
+                      <p class="pro_p1">미장센</p>
+                      <p class="pro_p2">웜브라운 염색 크림</p>
+                      <p class="pro_p3">6,300원</p>
                     </div>
                   </div>
         
                   <div class="second_3 second">
                     <div class="product">
-                      <img src="" alt="">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/sun4/png/sun1_17900.png" alt="1">
+                      <p class="pro_p1">AHC</p>
+                      <p class="pro_p2">기미 선 세럼</p>
+                      <p class="pro_p3">17,900원</p>
                     </div>
                     <div class="product">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/sun4/png/sun2_18900.png" alt="2">
+                      <p class="pro_p1">CARE ZONE</p>
+                      <p class="pro_p2">촉촉 보습 선크림</p>
+                      <p class="pro_p3">18,900원</p>
                     </div>
                     <div class="product">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/sun4/png/sun3_14800.png" alt="3">
+                      <p class="pro_p1">식물나라</p>
+                      <p class="pro_p2">가벼운 수분 선젤</p>
+                      <p class="pro_p3">14,800원</p>
                     </div>
                     <div class="product">
-                      <p class="pro_p1"></p>
-                      <p class="pro_p2"></p>
-                      <p class="pro_p3"></p>
+                      <img src="img/art2/sun4/png/sun4_14800.png" alt="4">
+                      <p class="pro_p1">식물나라</p>
+                      <p class="pro_p2">페이스 앤 바디 저자극 선 쿠션</p>
+                      <p class="pro_p3">14,800원</p>
                     </div>
                   </div>
                 </div>
