2021-07-22 art_1 사진 및 효과 적용

--- a/index.html
+++ b/index.html
@@ -78,11 +78,14 @@
                       </div>
                     </div>
                 </div>
-                <img src="img/art1/ball_1.png" alt="ball_1">
-                <img src="img/art1/ball_2.png" alt="ball_2">
-                <img src="img/art1/crap.png" alt="crap">
-                <img src="img/art1/sole.png" alt="sole">
-                <img src="img/art1/star.png" alt="star">
+                <div id="art1_imgBox" class="art1_imgBox">
+                  <img src="img/art1/ball_1.png" alt="ball_1">
+                  <img src="img/art1/ball_2.png" alt="ball_2">
+                  <img src="img/art1/crap.png" alt="crap">
+                  <img src="img/art1/sole.png" alt="sole">
+                  <img src="img/art1/star.png" alt="star">
+                </div>
+            
             </article>
             
             <article id="art_2" class="art_2">
