--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             
             </article>
             
+            <!-- It was coded by "Jisu Lee" -->
             <article id="art_2" class="art_2">
               <div id="sec_box1" class="sec_box1 sec_box">
                 <h1>HOT한 잇!템 COOL한 가격에 겟!</h1>
