--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <div id="sec_box1" class="sec_box1 sec_box">
                     <h1>HOT한 잇!템 COOL한 가격에 겟!</h1>
                     <span class="text1">
-                  "쉿! 잠깐 여기 좀 봐주실래요?"
-                </span>
+            "쉿! 잠깐 여기 좀 봐주실래요?"
+          </span>
                 </div>
                 <div id="sec_box2" class="sec_box2 sec_box">
                     <div id="sec_sub1" class="sub">
@@ -234,7 +234,7 @@
                         <p>아보카도에서 3만원 이상 구매시<br>2만원 상당의 사은품 증정</p>
                     </div>
                     <div id="thurd1_button" class="third1_btn1">
-                        <button><a href="#">바로가기</a></button>
+                        <button><a href="sub1.html">바로가기</a></button>
                     </div>
                 </div>
                 <div id="third_2" class="third_2 third">
@@ -277,8 +277,8 @@
                 <img src="img/id/Avocado.png" alt="Avocado">
             </div>
             <form action="info.php " method="POST " class="login_box ">
-                <label for="email"><input type="email " name="email " id="email " 
-                  placeholder="이메일 " maxlength="30 " required pattern="[a-z]"></label>
+                <label for="email"><input type="email " name="email " id="email " placeholder="이메일 " maxlength="30 " required
+            pattern="[a-z]"></label>
                 <label for=" "><input type="password" name="password" id="password" placeholder="비밀번호" required></label>
                 <input type="submit" value="로그인">
             </form>
