--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oliveYoung</title>
+    <title>Avocado</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -227,7 +227,6 @@
                 <!-- 윤다솔입니다 -->
                 <div id="third_1" class="third_1 third">
                     <div id="third1_box" class="third1_box1">
-                        <img src="/img/art3/1.png">
                     </div>
                     <div id="third1_text" class="third1_text1">
                         <h3>아보카도의 엄청난 선물</h3>
@@ -238,7 +237,8 @@
                     </div>
                 </div>
                 <div id="third_2" class="third_2 third">
-                    <div id="third2_box" class="third2_box2"></div>
+                    <div id="third2_box" class="third2_box2">
+                    </div>
                     <div id="third2_text" class="third2_text2">
                         <h3>매일매일 출석하자 !</h3>
                         <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
@@ -250,7 +250,8 @@
 
 
                 <div id="third_3" class="third_3 third">
-                    <div id="third3_box" class="third3_box3"></div>
+                    <div id="third3_box" class="third3_box3">
+                    </div>
                     <div id="third3_text" class="third3_text3">
                         <h3>회원가입시 3000P 선물</h3>
                         <p>지금 바로 아보카도 회원가입시<br>3000P를 드립니다!</p>
