--- a/index.html
+++ b/index.html
@@ -274,20 +274,23 @@
                 <img src="img/id/Avocado.png" alt="Avocado">
             </div>
             <form action="info.php " method="POST " class="login_box ">
-                <label for="email"><input type="email " name="email " id="email " placeholder="이메일 " maxlength="30 " required
-            pattern="[a-z]"></label>
+                <label for="email"><input type="email " name="email " id="email " placeholder="이메일 " maxlength="30"></label>
                 <label for=" "><input type="password" name="password" id="password" placeholder="비밀번호" required></label>
                 <input type="submit" value="로그인">
             </form>
             <div id="find_info " class="find_info login_box ">
 
                 <div id="signUp" class="signUp">
-                    <p>이메일로 회원가입</p>
+                   <a href="#"> 이메일로 회원가입</a>
                 </div>
             </div>
             <div id="start_sns " class="start_sns login_box ">
-                <div id="sns_left" class="sns_left"></div>
-                <div id="sns_right" class="sns_right"></div>
+                <div id="sns_left" class="sns_left">
+                    <a href="#"><img src="img/banner/kakao.png" alt="kakao"></a>
+                </div>
+                <div id="sns_right" class="sns_right">
+                    <a href="#"><img src="img/banner/naver.png" alt="naver"></a>
+                </div>
             </div>
             <div id="login_footer " class="login_footer login_box">
                 <div id="foot_info" class="foot_info">
@@ -296,11 +299,12 @@
                     <p>A/S 고객센터 1899-6840</p>
                 </div>
             </div>
-        </div>
 
-        </article>
 
-        </section>
+    </div>
+
+
+       
 
 </body>
 
