--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <p>지금 바로 아보카도 회원가입시<br>3000P를 드립니다!</p>
                     </div>
                     <div id="thurd3_button" class="third3_btn3">
-                        <button><a href="#">바로가기</a></button>
+                        <button>바로가기</button>
                     </div>
                 </div>
 
@@ -273,9 +273,13 @@
                 </div>
                 <img src="img/id/Avocado.png" alt="Avocado">
             </div>
-            <form action="info.php " method="POST " class="login_box ">
-                <label for="email"><input type="email " name="email " id="email " placeholder="이메일 " maxlength="30"></label>
-                <label for=" "><input type="password" name="password" id="password" placeholder="비밀번호" required></label>
+            <form action="info.php " method="POST " id="login_box" class="login_box">
+                <label for="email">
+                    <input type="email " name="email " id="email " placeholder="이메일 " maxlength="30">
+                </label>
+                <label for="password">
+                    <input type="password" name="password" id="password" placeholder="비밀번호" required>
+                </label>
                 <input type="submit" value="로그인">
             </form>
             <div id="find_info " class="find_info login_box ">
@@ -300,11 +304,40 @@
                 </div>
             </div>
 
+            
 
+
+
+        </div>
+
+        <div id="join_av_bg" class="join_av_bg"></div>
+        <div id="join_av" class="join_av">
+            <div id="join_close" class="join_close">
+                <span></span>
+            </div>
+            <div id="join_banner" class="join_banner">
+                <img src="img/join/Avocado.png" alt="Avocado">
+            </div>
+            <form action="join_db.php" method="POST" id="join_form" class="join_form">
+                <label for="join_id">
+                    <input type="text" name="join_id" id=join_id" placeholder="abc@naver.com">
+                </label>
+                <label for="join_password">
+                    <input type="password" name="join_password" id=join_password" placeholder="비밀번호를 입력하시오">
+                </label>
+                <input type="submit" name="join_submit" id="join_submit" value="회원가입">
+            </form>
+            <!-- <form action="join_db.php" method="POST">
+                <span>아이디</span>
+                <input type="text" name="id" />
+                <span>비밀번호</span>
+                <input type="password" name="password" />
+                <button type="submit">회원가입</button>
+            </form> -->
+        </div>
+
+    <!-- wrap div -->
     </div>
-
-
-       
 
 </body>
 
