회원가입 수정

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div id="find_info " class="find_info login_box ">
 
                 <div id="signUp" class="signUp">
-                   <a href="#"> 이메일로 회원가입</a>
+                    <p>이메일로 회원가입</p>
                 </div>
             </div>
             <div id="start_sns " class="start_sns login_box ">
