--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <p class="pro_p3">16,500원</p>
                         </div>
                         <div class="product">
-                            <img src="img/art2/diet2/png/4.png" alt="4">
+                            <img src="img/art2/diet2/png/health4_19900.png" alt="4">
                             <p class="pro_p1">BYO</p>
                             <p class="pro_p2">식물성 피부 유산균</p>
                             <p class="pro_p3">19,900원</p>
