--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <link rel="shortcut icon" type="image/x-icon" href="./img/favicon/Avocado.ico">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/css.css">
-    <script src="js/script.js"></script>
-    <script src="js/product_change.js"></script>
+    <script defer src="js/script.js"></script>
+    <script defer src="js/product_change.js"></script>
 
 </head>
 
