정규표현식 아이디 완성

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </div>
             <form action="info.php " method="POST " id="login_box" class="login_box">
                 <label for="email">
-                    <input type="email " name="email " id="email " placeholder="이메일 " maxlength="30">
+                    <input type="email " name="email " id="email " placeholder="이메일 " maxlength="30" required>
                 </label>
                 <label for="password">
                     <input type="password" name="password" id="password" placeholder="비밀번호" required>
