아이디 정규식 수정

--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
             </div>
             <form action="info.php " method="POST " id="login_box" class="login_box">
                 <label for="email">
-                    <input type="email " name="email " id="email " placeholder="이메일 " maxlength="30" required>
+                    <input type="email " name="email " id="email " placeholder="이메일 8~16자리 문자와 숫자를 입력해주세요. " maxlength="30" required>
                 </label>
                 <label for="password">
                     <input type="password" name="password" id="password" placeholder="비밀번호" required>
                 </label>
-                <input type="submit" value="로그인">
+                <input type="submit" value="로그인" id="submit" name="submit">
             </form>
             <div id="find_info " class="find_info login_box ">
 
