--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <img src="img/banner/Avocado.png" alt="Avocado">
         </div>
         <section>
+            <!-- 이민진입니다 -->
             <article id="art_1" class="art_1">
                 <div id="first" class="first art_box">
                     <p>더운날씨에 힘드시죠? </p>
@@ -86,6 +87,7 @@
 
             </article>
 
+            <!-- 이지수입니다 -->
             <article id="art_2" class="art_2">
                 <div id="sec_box1" class="sec_box1 sec_box">
                     <h1>HOT한 잇!템 COOL한 가격에 겟!</h1>
@@ -237,6 +239,7 @@
                         <button><a href="sub1.html">바로가기</a></button>
                     </div>
                 </div>
+        
                 <div id="third_2" class="third_2 third">
                     <div id="third2_box" class="third2_box2">
                     </div>
@@ -245,7 +248,7 @@
                         <p>매일매일 출석하고<br> 알뜰하게 할인 받자!</p>
                     </div>
                     <div id="thurd2_button" class="third2_btn2">
-                        <button><a href="#">바로가기</a></button>
+                        <button><a href="sub2.html">바로가기</a></button>
                     </div>
                 </div>
 
