--- a/sub1.html
+++ b/sub1.html
@@ -15,6 +15,9 @@
 
     <section>
         <div class="box">
+            <div id="banner" class="banner">
+				<a href="index.html"><img src="img/banner/Avocado.png" alt="Avocado"></a>
+			</div>
             <div class="event_text">
                 <h2>✨ 사은품 증정 EVENT ✨</h2>
             </div>
